k8s/go-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -o k8s/
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: go-app
  name: go-app
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: go-app
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -o k8s/
        kompose.version: 1.28.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/url-shortener-default: "true"
        io.kompose.service: go-app
    spec:
      containers:
        - env:
            - name: REDIS_HOST
              value: redis-storage
            - name: REDIS_PASSWORD
              value: 1bfb0c6dbfb9d4f7cd0506ae9e88ffb3
            - name: REDIS_PORT
              value: "6379"
          image: walenpiotr/url-shortener:1.0.0
          name: go-app
          ports:
            - containerPort: 8000
          resources: {}
          imagePullPolicy: Always
      restartPolicy: Always
status: {}
