k8s/redis-storage-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -o k8s/
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: redis-storage
  name: redis-storage
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: redis-storage
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -o k8s/
        kompose.version: 1.28.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/url-shortener-default: "true"
        io.kompose.service: redis-storage
    spec:
      containers:
        - args:
            - redis-server
            - --save
            - "20"
            - "1"
            - --loglevel
            - warning
            - --requirepass
            - 1bfb0c6dbfb9d4f7cd0506ae9e88ffb3
          image: redis:7.0-alpine
          name: redis-storage
          ports:
            - containerPort: 6379
          resources: {}
          volumeMounts:
            - mountPath: /data
              name: redis-storage-claim0
      restartPolicy: Always
      volumes:
        - name: redis-storage-claim0
          persistentVolumeClaim:
            claimName: redis-storage-claim0
status: {}
